<resources>
    <string name="app_name">QuanLi_linhkien</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_favorite">Linh kiện</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_password">Change Password</string>

    <string name="navigation_drawer_open"> Qpen navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>